Elementary program page layout & links are created

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatem impedit voluptate. Doloribus, voluptas dolore! Cupiditate aliquid sequi deserunt.</p>
       </div>
       <div class="info-right">
-        <img src="./img/photo-2.jpg" alt="hotel">
+        <img src="./img/photo-2.jpg" alt="online world">
       </div>
     </div>
   </section>
