--- a/index.html
+++ b/index.html
@@ -56,18 +56,21 @@
       <i class="fas fa-hotel fa-3x"></i>
       <h3>Elementary</h3>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+      <a class="btn" href="elementary.html">Click Me</a>
     </div>
     <div class="box bg-primary">
         <!-- <i class="fas fa-utensils fa-3x"></i> -->
         <i class="fas fa-book-reader fa-3x"></i>
         <h3>Middle</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+        <a class="btn" href="elementary.html">Click Me</a>
     </div>
     <div class="box bg-light">
         <!-- <i class="fas fa-dumbbell fa-3x"></i> -->
         <i class="fas fa-user-graduate fa-3x"></i>
         <h3>Secondary</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+        <a class="btn" href="elementary.html">Click Me</a>
     </div>
   </section>
 
