Content pages editted

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <div class="container">
         <div class="showcase-content">
           <h1><span class="text-primary">Virtual</span> Classroom</h1>
-          <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, eligendi laboriosam. Repellendus officia harum eaque.</p>
-          <a class="btn" href="about.html">About Our Programs</a>
+          <p class="lead">We are with our mission to educate marginalised community children to their potential.</p>
+          <a class="btn" href="about.html">Learn more</a>
         </div>
       </div>
     </div>
@@ -41,11 +41,7 @@
     <div class="info-content">
       <h2><span class="text-primary">The History</span> Of Our Program</h2>
       <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
-          aliquam dolor alias iste autem, quaerat magni unde accusantium qui
-          fuga placeat quidem quo pariatur, voluptatum, ea sequi? Corporis,
-          explicabo quisquam dolor placeat praesentium nesciunt mollitia quos
-          nobis natus voluptatum asperiores!
+          SLT MN Guiding Academy is a non profit organization, located in Minnesota, USA. It was established in 2017, with the mission to bridge education gaps among marginalised community children. The Academy has been managing and guiding learning centers, by providing educational arrangements to refugee children, asylum seekers or internally displaced children, who have no access to formal education due to their status in their host country.
       </p>
       <a href="about.html" class="btn btn-light">Read More</a>
     </div>
