--- a/primary.html
+++ b/primary.html
@@ -142,9 +142,9 @@
           <tbody>
             <tr class="table-primary">
               <th scope="row">October</th>
-              <td>1. Addition 2. Subtraction 3. Multiplication 4.Matching 5.Word problem 6.Geometry 7.Probability 8.Meaurement</td>
-              <td>1. Singular and plural. 2.Nouns 3.Verbs 4.Sentences 5.Adjectives 6.Adverbs 7.Story 8.Grammar</td>
-              <td>1. Plants and Animals 2.Animal Kingdom 3.Senses 4.Digestive system 5.Excretory systen 6.Earth science 7.Solar System 8.REspiratory system</td>
+              <td> <p>Chapter 1. Counting Objects</p> <p> Chapter 2. Counting Figures</p> <p>Chapter 3. Additions Boxes </p> <p>Chapter 4. Matching Addition</p> <p>Chapter 5. Counting groups of 10.</p> <p>Chapter 6. Place value within 20.</p> <p>Chapter 7. Matching & Reading Clock</p> <p>Chapter 8. Revisions </p></td>
+              <td> <p>Chapter 1. Letters & Vowels.</p> <p>Chapter 2.sh / th Key words, Ck / Nk Key Words</p> <p>Chapter 3. Ch / Tch Key words, S / Es Key words</p> <p> Chapter 4.ing / Ed / Er, Er / Est Key Words. </p>8.LL / FF / SS / ZZ Key words. 9. Ae /Ai/ Ay 10. Ee / Ea / Ie / EE. 11. Ie / Igh / Y. 12. Oa / Oe / Ow Key words. 13. OO / Ue / Ew. 14. Revisions. </td>
+              <td>1. About Farm & Ocean Animals. 2. Animals & their homes</td>
             </tr>
             <tr class="table-primary">
               <th scope="row">November</th>
