--- a/program.html
+++ b/program.html
@@ -7,8 +7,9 @@
   <meta name="description" content="Welcome to our learning center">
   <meta name="keywords" content="Learning center, Preschool, elementary, middle, upper, Pre-GED">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
   <title>SLT Learning Center</title>
 </head>
 <body>
@@ -113,6 +114,8 @@
     </div>
   
   </main>
+
+  <div class="clr"></div>
 
   <footer id="main-footer">
     <p>SLT &copy; 2020, All RIghts Reserved</p>
