--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <header>
     <nav id="navbar">
       <div class="container">
-        <h1 class="logo"><a href="index.html">HBT</a></h1>
+        <h1 class="logo"><a href="index.html">SLT MN Guiding Academy</a></h1>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
@@ -26,27 +26,22 @@
     </nav>
   </header>
 
-  <section id="contact-form" class="py-3">
+  <section id="about-info" class="bg-light py-3">
     <div class="container">
-      <h1 class="l-heading"><span class="text-primary">Contact</span> Us</h1>
-      <p>Please fill out the form below to contact us</p>
-      <form action="process.php">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" name="name" id="name">
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email">
-        </div>
-        <div class="form-group">
-          <label for="message">Message</label>
-          <textarea name="message" id="message"></textarea>
-        </div>
-        <button type="submit" class="btn">Submit</button>
-      </form>
+      <div class="info-left">
+        <h1 class="l-heading"><span class="text-primary">Info</span> Session</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem veritatis illo, similique labore voluptate nulla animi dolorum eius laborum illum, nesciunt quod reprehenderit dicta autem vel nobis minima sit deleniti!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatem impedit voluptate. Doloribus, voluptas dolore! Cupiditate aliquid sequi deserunt.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatem impedit voluptate. Doloribus, voluptas dolore! Cupiditate aliquid sequi deserunt.</p>
+      </div>
+      <div class="info-right">
+        <img src="./img/communication.jpg" alt="online world">
+      </div>
     </div>
   </section>
+
+  
 
   <section id="contact-info" class="bg-dark">
     <div class="container">
@@ -56,14 +51,15 @@
             <p>Minnesota, USA</p>
           </div>
           <div class="box">
-              <i class="fas fa-phone fa-3x"></i>
-              <h3>Phone Number</h3>
-              <p>(612) 555-5555</p>
+              <!-- <i class="fas fa-phone fa-3x"></i> -->
+              <i class="fab fa-whatsapp-square fa-3x"></i>
+              <h3>Phone(WhatsApp) Number</h3>
+              <p>(612) 715-3094</p>
           </div>
           <div class="box">
               <i class="fas fa-envelope fa-3x"></i>
               <h3>Email Address</h3>
-              <p>admin@slt.co</p>
+              <p>sltmnguiding@gmail.com</p>
           </div>
     </div>
   </section>
