About page editted

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="info-content">
       <h2><span class="text-primary">The History</span> Of Our Program</h2>
       <p>
-          SLT MN Guiding Academy is a non profit organization, located in Minnesota, USA. It was established in 2017, with the mission to bridge education gaps among marginalised community children. The Academy has been managing and guiding learning centers, by providing educational arrangements to refugee children, asylum seekers or internally displaced children, who have no access to formal education due to their status in their host country.
+          SLT MN Guiding Academy is a non profit organization, located in Minnesota, USA. It was established in 2017, with the mission to bridge education gaps among marginalised community children. The Academy has been managing and guiding learning centers, by providing educational arrangements and online classes to marginalized community children, who have no access or limitted access to formal education.
       </p>
       <a href="about.html" class="btn btn-light">Read More</a>
     </div>
