Preschool & pre-elementary content page editted

--- a/primary.html
+++ b/primary.html
@@ -148,17 +148,15 @@
             </tr>
             <tr class="table-primary">
               <th scope="row">November</th>
-              <td><p>Chapter 5. Counting groups of 10.</p> <p>Chapter 6. Place value within 20.</p> <p>Chapter 7. Matching & Reading Clock</p> <p>Chapter 8. Revisions </p></td>
-              <td><p> Chapter 6. Ee / Ea / Ie / EE Key Words. & Ie / Igh / Y. Key words. </p> <p>Chapter 7. Oa / Oe / Ow Key words. & OO / Ue / Ew. Key words</p><p>Chapter 8. Revisions.
-                
-              </td>
-              <td>1. Plants and Animals 2.Animal Kingdom 3.Senses 4.Digestive system 5.Excretory systen 6.Earth science 7.Solar System 8.REspiratory system</td>
+              <td><p>Chapter 5. Counting groups of 10.</p> <p>Chapter 6. Place value within 20.</p> <p>Chapter 7. Matching & Reading Clock</p> <p>Week 4. Revisions - 1 </p></td>
+              <td><p> Chapter 6. Ee / Ea / Ie / EE Key Words. & Ie / Igh / Y. Key words. </p> <p>Chapter 7. Oa / Oe / Ow Key words. & OO / Ue / Ew. Key words</p><p>Week 4. Revisions - 1.</p> </td>
+              <td><P>Chapter 3</P> <P>Chapter 4</P><P>Chapter 5</P><P>Week 4: Revisions - 1</P></td>
             </tr>
             <tr class="table-primary">
               <th scope="row">December</th>
-              <td>1. Addition 2. Subtraction 3. Multiplication 4.Matching 5.Word problem 6.Geometry 7.Probability 8.Meaurement</td>
-              <td>1. Singular and plural. 2.Nouns 3.Verbs 4.Sentences 5.Adjectives 6.Adverbs 7.Story 8.Grammar</td>
-              <td>1. Plants and Animals 2.Animal Kingdom 3.Senses 4.Digestive system 5.Excretory systen 6.Earth science 7.Solar System 8.REspiratory system</td>
+              <td><P>Week 1: Revisions - 2</P> <P>Week 2: Revisions - 3</P><P>Week 3: Final Semester Exam</P><P>Week 4: Semester Break Starts</P></td>
+              <td><P>Week 1: Revisions - 2</P> <P>Week 2: Revisions - 3</P><P>Week 3: Final Semester Exam</P><P>Week 4: Semester Break Starts</P></td>
+              <td><P>Week 1: Revisions - 2</P> <P>Week 2: Revisions - 3</P><P>Week 3: Final Semester Exam</P><P>Week 4: Semester Break Starts</P></td>
             </tr>
           </tbody>
         </table>
@@ -185,21 +183,22 @@
           <tbody>
             <tr class="table-success">
               <th scope="row">October</th>
-              <td>1. Addition 2. Subtraction 3. Multiplication 4.Matching 5.Word problem 6.Geometry 7.Probability 8.Meaurement</td>
-              <td>1. Singular and plural. 2.Nouns 3.Verbs 4.Sentences 5.Adjectives 6.Adverbs 7.Story 8.Grammar</td>
-              <td>1. Plants and Animals 2.Animal Kingdom 3.Senses 4.Digestive system 5.Excretory systen 6.Earth science 7.Solar System 8.REspiratory system</td>
+              <td><p>Chapter 1. Vertical Addition - Multiples of 10</p> <p>Chapter 2: Writing number words within 100</p> <p> Chapter 3. Subtracting multiples of 10</p> <p>Chapter 4. Number words 120 </p></td>
+              <td><p>Chapter 1. The alphabets, Naming words & Describing words</p> <p>Chapter 2: Naming and Describing & Doing words</p> <p> Chapter 3. Alphabetical order & Doing words</p> <p>Chapter 4. More than one & Special Naming words</p></td>
+              <td><p>Chapter 1. Living things</p> <p>Chapter 2: Plants & Animals</p> <p> Chapter 3. The human body</p> <p>Chapter 4. </p></td>
             </tr>
             <tr class="table-success">
               <th scope="row">November</th>
-              <td>1. Addition 2. Subtraction 3. Multiplication 4.Matching 5.Word problem 6.Geometry 7.Probability 8.Meaurement</td>
-              <td>1. Singular and plural. 2.Nouns 3.Verbs 4.Sentences 5.Adjectives 6.Adverbs 7.Story 8.Grammar</td>
-              <td>1. Plants and Animals 2.Animal Kingdom 3.Senses 4.Digestive system 5.Excretory systen 6.Earth science 7.Solar System 8.REspiratory system</td>
+              <td><p>Chapter 5. Counting shapes upto 120</p> <p>Chapter 6: Writing numbers upto 120</p> <p> Chapter 7. Continung counting</p> <p>Chapter 8. Comparing counting within 100 </p><P>Week 4: Revisions - 1</P></td>
+              <td><p>Chapter 5. Doing words & Sentences</p> <p>Chapter 6: Doing words & Describing words</p> <p> Chapter 7. Sentences 1 & 2</p> <p>Chapter 4. </p><P>Week 4: Revisions - 1</P></td>
+              <td><p>Chapter 5. </p> <p>Chapter 6: </p> <p> Chapter 7. </p> <p>Chapter 8. </p><P>Week 4: Revisions - 1</P></td>
             </tr>
             <tr class="table-success">
               <th scope="row">December</th>
-              <td>1. Addition 2. Subtraction 3. Multiplication 4.Matching 5.Word problem 6.Geometry 7.Probability 8.Meaurement</td>
-              <td>1. Singular and plural. 2.Nouns 3.Verbs 4.Sentences 5.Adjectives 6.Adverbs 7.Story 8.Grammar</td>
-              <td>1. Plants and Animals 2.Animal Kingdom 3.Senses 4.Digestive system 5.Excretory systen 6.Earth science 7.Solar System 8.REspiratory system</td>
+              
+              <td><P>Week 1: Revisions - 2</P> <P>Week 2: Revisions - 3</P><P>Week 3: Final Semester Exam</P><P>Week 4: Semester Break Starts</P></td>
+              <td><P>Week 1: Revisions - 2</P> <P>Week 2: Revisions - 3</P><P>Week 3: Final Semester Exam</P><P>Week 4: Semester Break Starts</P></td>
+              <td><P>Week 1: Revisions - 2</P> <P>Week 2: Revisions - 3</P><P>Week 3: Final Semester Exam</P><P>Week 4: Semester Break Starts</P></td>
             </tr>
           </tbody>
         </table>
