Primary html contents editted

--- a/primary.html
+++ b/primary.html
@@ -226,21 +226,21 @@
       <tbody>
         <tr class="table-danger">
           <th scope="row">October</th>
-          <td>1. Addition 2. Subtraction 3. Multiplication 4.Matching 5.Word problem 6.Geometry 7.Probability 8.Meaurement</td>
-          <td>1. Singular and plural. 2.Nouns 3.Verbs 4.Sentences 5.Adjectives 6.Adverbs 7.Story 8.Grammar</td>
-          <td>1. Plants and Animals 2.Animal Kingdom 3.Senses 4.Digestive system 5.Excretory systen 6.Earth science 7.Solar System 8.REspiratory system</td>
+          <td><p>Chapter 1. Two digit addition drills</p> <p>Chapter 2: Simple addition word problems</p> <p> Chapter 3. Horizontal addition within 100</p> <p>Chapter 4: Multiplication and Division drills </p><P>Chapter 5: </P></td>
+              <td><p>Chapter 1: Using your senses & My Family</p> <p>Chapter 2: On the beach & Growing Beans</p> <p> Chapter 3: I like and Toys</p> <p>Chapter 4. The gingerbread man & All about foxes</p><P>Chapter 5: Happy Birthday</P></td>
+              <td><p>Chapter 1: Earth's past. </p> <p>Chapter 2: </p> <p> Chapter 3. </p> <p>Chapter 4. </p></td>
         </tr>
         <tr class="table-danger">
           <th scope="row">November</th>
-          <td>1. Addition 2. Subtraction 3. Multiplication 4.Matching 5.Word problem 6.Geometry 7.Probability 8.Meaurement</td>
-          <td>1. Singular and plural. 2.Nouns 3.Verbs 4.Sentences 5.Adjectives 6.Adverbs 7.Story 8.Grammar</td>
-          <td>1. Plants and Animals 2.Animal Kingdom 3.Senses 4.Digestive system 5.Excretory systen 6.Earth science 7.Solar System 8.REspiratory system</td>
+          <td><p>Chapter 1. Two digit addition word problem</p> <p>Chapter 2: Simple subtraction</p> <p> Chapter 3. Subtraction word problem within 100</p> <p>Chapter 4: Two step word problem </p><P>Chapter 5: </P></td>
+              <td><p>Chapter 1: Growing up & Food poems</p> <p>Chapter 2: Jack and the special beans</p> <p> Chapter 3: How to make ice lollies</p> <p>Chapter 4. Tigers</p><P>Chapter 5: An old red hat</P></td>
+              <td><p>Chapter 5: . </p> <p>Chapter 6: </p> <p> Chapter 7. </p> <p>Week 4: Revisions 1 </p></td>
         </tr>
         <tr class="table-danger">
           <th scope="row">December</th>
-          <td>1. Addition 2. Subtraction 3. Multiplication 4.Matching 5.Word problem 6.Geometry 7.Probability 8.Meaurement</td>
-          <td>1. Singular and plural. 2.Nouns 3.Verbs 4.Sentences 5.Adjectives 6.Adverbs 7.Story 8.Grammar</td>
-          <td>1. Plants and Animals 2.Animal Kingdom 3.Senses 4.Digestive system 5.Excretory systen 6.Earth science 7.Solar System 8.REspiratory system</td>
+          <td><P>Week 1: Revisions - 2</P> <P>Week 2: Revisions - 3</P><P>Week 3: Final Semester Exam</P><P>Week 4: Semester Break Starts</P></td>
+              <td><P>Week 1: Revisions - 2</P> <P>Week 2: Revisions - 3</P><P>Week 3: Final Semester Exam</P><P>Week 4: Semester Break Starts</P></td>
+              <td><P>Week 1: Revisions - 2</P> <P>Week 2: Revisions - 3</P><P>Week 3: Final Semester Exam</P><P>Week 4: Semester Break Starts</P></td>
         </tr>
       </tbody>
     </table>
