Primary portions added

--- a/primary.html
+++ b/primary.html
@@ -143,13 +143,13 @@
             <tr class="table-primary">
               <th scope="row">October</th>
               <td> <p>Chapter 1. Counting Objects</p> <p> Chapter 2. Counting Figures</p> <p>Chapter 3. Additions Boxes </p> <p>Chapter 4. Matching Addition</p> </td>
-              <td> <p>Chapter 1. Letters & Vowels.</p> <p>Chapter 2.sh / th Key words, Ck / Nk Key Words</p> <p>Chapter 3. Ch / Tch Key words, S / Es Key words</p> <p> Chapter 4. ing / Ed / Er, Er / Est Key Words.</p> <p> Chapter 5. LL / FF / SS / ZZ Key words. & Ae /Ai/ Ay </p> </p> </td>
+              <td> <p>Chapter 1-2. Letters & Vowels.</p> <p>Chapter 3-4.sh / th Key words, Ck / Nk Key Words</p> <p>Chapter 5-6. Ch / Tch Key words, S / Es Key words</p> <p> Chapter 7-8. ing / Ed / Er, Er / Est Key Words.</p> <p> Chapter 9-10. LL / FF / SS / ZZ Key words. & Ae /Ai/ Ay </p> </p> </td>
               <td> <p>Chapter 1. About Farm & Ocean Animals.</p> <p>Chapter 2. Animals & their homes</p></td>
             </tr>
             <tr class="table-primary">
               <th scope="row">November</th>
               <td><p>Chapter 5. Counting groups of 10.</p> <p>Chapter 6. Place value within 20.</p> <p>Chapter 7. Matching & Reading Clock</p> <p>Week 4. Revisions - 1 </p></td>
-              <td><p> Chapter 6. Ee / Ea / Ie / EE Key Words. & Ie / Igh / Y. Key words. </p> <p>Chapter 7. Oa / Oe / Ow Key words. & OO / Ue / Ew. Key words</p><p>Week 4. Revisions - 1.</p> </td>
+              <td><p> Chapter 11-12. Ee / Ea / Ie / EE Key Words. & Ie / Igh / Y. Key words. </p> <p>Chapter 13-14. Oa / Oe / Ow Key words. & OO / Ue / Ew. Key words</p><p>Week 4. Revisions - 1.</p> </td>
               <td><P>Chapter 3</P> <P>Chapter 4</P><P>Chapter 5</P><P>Week 4: Revisions - 1</P></td>
             </tr>
             <tr class="table-primary">
@@ -184,13 +184,13 @@
             <tr class="table-success">
               <th scope="row">October</th>
               <td><p>Chapter 1. Vertical Addition - Multiples of 10</p> <p>Chapter 2: Writing number words within 100</p> <p> Chapter 3. Subtracting multiples of 10</p> <p>Chapter 4. Number words 120 </p></td>
-              <td><p>Chapter 1. The alphabets, Naming words & Describing words</p> <p>Chapter 2: Naming and Describing & Doing words</p> <p> Chapter 3. Alphabetical order & Doing words</p> <p>Chapter 4. More than one & Special Naming words</p></td>
+              <td><p>Chapter 1-3. The alphabets, Naming words & Describing words</p> <p>Chapter 4-5: Naming and Describing & Doing words</p> <p> Chapter 6-7. Alphabetical order & Doing words</p> <p>Chapter 8-9. More than one & Special Naming words</p></td>
               <td><p>Chapter 1. Living things</p> <p>Chapter 2: Plants & Animals</p> <p> Chapter 3. The human body</p> <p>Chapter 4. </p></td>
             </tr>
             <tr class="table-success">
               <th scope="row">November</th>
               <td><p>Chapter 5. Counting shapes upto 120</p> <p>Chapter 6: Writing numbers upto 120</p> <p> Chapter 7. Continung counting</p> <p>Chapter 8. Comparing counting within 100 </p><P>Week 4: Revisions - 1</P></td>
-              <td><p>Chapter 5. Doing words & Sentences</p> <p>Chapter 6: Doing words & Describing words</p> <p> Chapter 7. Sentences 1 & 2</p> <p>Chapter 4. </p><P>Week 4: Revisions - 1</P></td>
+              <td><p>Chapter 10-11. Doing words & Sentences</p> <p>Chapter 12-14: Doing words, Describing words & Sentences</p><P>Week 4: Revisions - 1</P></td>
               <td><p>Chapter 5. </p> <p>Chapter 6: </p> <p> Chapter 7. </p> <p>Chapter 8. </p><P>Week 4: Revisions - 1</P></td>
             </tr>
             <tr class="table-success">
@@ -227,13 +227,13 @@
         <tr class="table-danger">
           <th scope="row">October</th>
           <td><p>Chapter 1. Two digit addition drills</p> <p>Chapter 2: Simple addition word problems</p> <p> Chapter 3. Horizontal addition within 100</p> <p>Chapter 4: Multiplication and Division drills </p><P>Chapter 5: </P></td>
-              <td><p>Chapter 1: Using your senses & My Family</p> <p>Chapter 2: On the beach & Growing Beans</p> <p> Chapter 3: I like and Toys</p> <p>Chapter 4. The gingerbread man & All about foxes</p><P>Chapter 5: Happy Birthday</P></td>
+              <td><p>Chapter 1-2: Using your senses & My Family</p> <p>Chapter 3-4: On the beach & Growing Beans</p> <p> Chapter 5-6: I like and Toys</p> <p>Chapter 7-8. The gingerbread man & All about foxes</p><P>Chapter 9: Happy Birthday</P></td>
               <td><p>Chapter 1: Earth's past. </p> <p>Chapter 2: </p> <p> Chapter 3. </p> <p>Chapter 4. </p></td>
         </tr>
         <tr class="table-danger">
           <th scope="row">November</th>
-          <td><p>Chapter 1. Two digit addition word problem</p> <p>Chapter 2: Simple subtraction</p> <p> Chapter 3. Subtraction word problem within 100</p> <p>Chapter 4: Two step word problem </p><P>Chapter 5: </P></td>
-              <td><p>Chapter 1: Growing up & Food poems</p> <p>Chapter 2: Jack and the special beans</p> <p> Chapter 3: How to make ice lollies</p> <p>Chapter 4. Tigers</p><P>Chapter 5: An old red hat</P></td>
+          <td><p>Chapter 1. Two digit addition word problem</p> <p>Chapter 2: Simple subtraction</p> <p> Chapter 3. Subtraction word problem within 100</p> <p>Chapter 4: Two step word problem </p><P>Chapter 5: </P> <P>Week 4: Revisions - 1</P></td>
+              <td><p>Chapter 10-11: Growing up & Food poems</p> <p>Chapter 12: Jack and the special beans</p> <p> Chapter 13: How to make ice lollies</p> <p>Chapter 14. Tigers</p><P>Chapter 15: An old red hat</P> <P>Week 4: Revisions - 1</P></td>
               <td><p>Chapter 5: . </p> <p>Chapter 6: </p> <p> Chapter 7. </p> <p>Week 4: Revisions 1 </p></td>
         </tr>
         <tr class="table-danger">
