Secondary english portion added

--- a/secondary.html
+++ b/secondary.html
@@ -145,7 +145,7 @@
               
               <td><p>Chapter 1. Add & Subtract variables within 1000</p> <p>Chapter 2: Two step word problem</p> <p> Chapter 3. Multiplying fractions</p> <p>Chapter 4:  </p><P>Chapter 5: </P></td>
 
-              <td><p>Chapter 1. Add & Subtract variables within 1000</p> <p>Chapter 2: Two step word problem</p> <p> Chapter 3. Multiplying fractions</p> <p>Chapter 4:  </p><P>Chapter 5: </P></td>
+              <td><p>Chapter 1. A home for grandfather</p> <p>Chapter 2: Would you like to live here?</p> <p> Chapter 3. Nouns and adjectives</p> <p>Chapter 4: The princess and the pea </p><P>Chapter 5: Hans Christian Andersen </P></td>
 
               <td><p>Chapter 1. Cells</p> <p>Chapter 2: From cells to Organisms</p> <p> Chapter 3. Diversity of Organisms</p> <p>Chapter 4:  </p><P>Chapter 5: </P></td>
               
@@ -154,7 +154,7 @@
               <th scope="row">November</th>
               <td><p>Chapter 1. </p> <p>Chapter 2: </p> <p> Chapter 3. </p> <p>Chapter 4:  </p><P>Chapter 5: </P></td>
 
-              <td><p>Chapter 1. </p> <p>Chapter 2: </p> <p> Chapter 3. </p> <p>Chapter 4:  </p><P>Chapter 5: </P></td>
+              <td><p>Chapter 6. Adjectives</p> <p>Chapter 2: New Neighbours</p> <p> Chapter 3. Rabbits</p> <p>Chapter 4:  Nouns</p><P>Chapter 5: Animal Tales</P></td>
 
               <td><p>Chapter 1. </p> <p>Chapter 2: </p> <p> Chapter 3. </p> <p>Chapter 4:  </p><P>Chapter 5: </P></td>
             </tr>
@@ -233,7 +233,7 @@
           <th scope="row">October</th>
           <td><p>Chapter 1. Basic Probability - 1</p> <p>Chapter 2: Baasic Probability - 2</p> <p> Chapter 3. Probability - Intermediate</p> <p>Chapter 4:  </p><P>Chapter 5: </P></td>
 
-          <td><p>Chapter 1. </p> <p>Chapter 2: </p> <p> Chapter 3. </p> <p>Chapter 4:  </p><P>Chapter 5: </P></td>
+          <td><p>Chapter 1. Who were the vikings </p> <p>Chapter 2: Erik the Vikings</p> <p> Chapter 3. A chinese Play</p> <p>Chapter 4:  The Great wall of china</p><P>Chapter 5: Castles in Stories</P></td>
 
               <td><p>Chapter 1. Properties of Matter</p> <p>Chapter 2: Elements</p> <p> Chapter 3. Classifying Elements</p> <p>Chapter 4: Mixures </p><P>Chapter 5: Compounds</P></td>
 
@@ -243,7 +243,7 @@
           <th scope="row">November</th>
           <td><p>Chapter 1. </p> <p>Chapter 2: </p> <p> Chapter 3. </p> <p>Chapter 4:  </p><P>Chapter 5: </P></td>
 
-              <td><p>Chapter 1. </p> <p>Chapter 2: </p> <p> Chapter 3. </p> <p>Chapter 4:  </p><P>Chapter 5: </P></td>
+              <td><p>Chapter 6. Let's celebrate </p> <p>Chapter 7: Stig of the Dump </p> <p> Chapter 8. Reduce, Reuse and Recycle</p> <p>Chapter 9: Rainbow poems</p><P>Chapter 10: Articles</P></td>
 
               <td><p>Chapter 1. </p> <p>Chapter 2: </p> <p> Chapter 3. </p> <p>Chapter 4:  </p><P>Chapter 5: </P></td>
         </tr>
